# upl-minecraft

./: README.md
admin/: .gitignore  README.md  clean.sh  make-backupjob-binary.sh  make-downproxy-binary.sh  make-proxyserver.sh  worlddata.txt
admin/backupjob-rs/: Cargo.toml
admin/backupjob-rs/src/: main.rs
admin/downproxy/: .gitignore  Cargo.toml  addr.txt
admin/downproxy/src/: main.rs
admin/downproxy/src/client/: address.rs  mod.rs
admin/downproxy/src/gcs/: auth.rs  mod.rs  public.rs
admin/downproxy/src/server/: mod.rs
admin/proxyserver/: Dockerfile
admin/serverfactory/: .gitignore  download-assets.sh  foamfix.cfg  make-server.sh  run.sh  server.properties  trixtalogin.conf
admin/supervisor/: .gitignore  make-downproxy-binary.sh  make-mcrcon.sh  make-supervisor.sh  remake-backupjob.sh
admin/supervisor/backupjob/: Dockerfile  main.sh
admin/supervisor/boilerplate-scripts/: server-down.sh  server-up.sh
admin/supervisor/javacontainer/: Dockerfile
