[package]
name = "downproxy"
version = "0.1.0"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com>"]
edition = "2018"

[dependencies]
regex = "^1.3.5"
log = "^0.4.8"
env_logger = "^0.7.1"
reqwest = { version = "^0.10", features = ["json"] }
tokio = { version = "^0.2", features = ["full"] }
yup-oauth2 = "^4.1.0"
hyper = "^0.13.4"
hyper-tls = "^0.4.1"